--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@ sudo supervisorctl start newebe
     <p>
     You can have a look at Newebe by going to this URL: 
     </p>
-    <a href="http//demo.newebe.org/">demo.newebe.org</a>
+    <a href="https://demo.newebe.org/">demo.newebe.org</a>
     <p>
     Sesame: newebe
     </p>
