typo in title...

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
     </div>
 
     <div class="feature feature-right">
-      <img src="images/owns.png" alt="Owns picture" />
-      <h3>Owns</h3>
+      <img src="images/owns.png" alt="Own picture" />
+      <h3>Own</h3>
       <p>Each user hosts his Newebe instance, you keep your data safely in 
       an enviromnent you own.</p>
     </div>
