--- a/newebe/client/public/index.html
+++ b/newebe/client/public/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Newebe, freedom to share</title>
+        <title>Example Cozy application</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 
@@ -17,8 +17,8 @@
             window.brunch = window.brunch || {};
             window.brunch['auto-reload'] = { enabled: true };
         </script-->
-        <script src="static/javascripts/modernizr-2.6.1.js"></script>
-        <link rel="stylesheet" href="static/stylesheets/app.css">
+        <script src="javascripts/modernizr-2.6.1.js"></script>
+        <link rel="stylesheet" href="stylesheets/app.css">
     </head>
 
     <body class="application">
@@ -28,7 +28,7 @@
 
         <!-- Your Markup -->
 
-        <script src="static/javascripts/vendor.js"></script>
-        <script src="static/javascripts/app.js" onload="require('initialize');"></script>
+        <script src="javascripts/vendor.js"></script>
+        <script src="javascripts/app.js" onload="require('initialize');"></script>
 </body>
 </html>
