--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@ sudo supervisorctl start newebe
     </div>
 
     <div id="faq">
+        <h2>FAQ</h2>
         <p><strong>
         Why Newebe is different from Diaspora, Friendica, Movim, SàT... ?
         </strong></p>
