fix links and improve styling

--- a/index.html
+++ b/index.html
@@ -74,10 +74,13 @@
     </div>
 
     <div class="downloads center">
-        <a href="https://github.com/downloads/gelnior/newebe/newebe-server_0.6.0-1_all.deb">Debian Package</a>,
-        <a href="https://github.com/gelnior/newebe/tree/master/deploy/docker">Dockerfile</a>
+        <a class="button" href="https://github.com/downloads/gelnior/newebe/newebe-server_0.6.0-1_all.deb">Debian Package</a>
+        <a class="button" href="https://github.com/gelnior/newebe/tree/master/deploy/docker">Dockerfile</a>
     </div>
 
+    <br />
+    <br />
+    <br />
     <div class="feature feature-left">
       <img src="images/share.png" alt="Share picture" />
       <h3>Share</h3>
@@ -108,13 +111,19 @@
 
     <div class="spacer"></div>
     <div class="center">
-    <a href="#install">Install it</a>
+    <br />
+    <br />
+    <br />
+    <a class="button" id="install-button" href="#install">Install it</a>
     </div>
     <div class="center">
+    <br />
     or
+    <br />
+    <br />
     </div>
     <div class="center">
-    <a href="#demo">Try the demo</a>
+    <a class="button" id="demo-button" href="#demo">Try the demo</a>
     </div>
 
     
