add a link to the Newebe CLI module

--- a/index.html
+++ b/index.html
@@ -326,6 +326,14 @@ sudo supervisorctl start newebe
     you must select a tag to tell which list of contacts will receive
     your post or your picture.
     </p>
+    <h3>Command Line Client</h3>
+    <p>
+    A CLI is available. You can post and read messages from the command line.
+    More details here:
+    <a href="https://github.com/gelnior/newebe-cli/blob/master/README.md">
+    Newebe-CLI
+    </a>
+    </p>
     <h3>More</h3>
     <p> For more informations about Newebe you can check the 
     <a href="http://github.com/gelnior/newebe">wiki</a>.
