add new urls for demo

--- a/index.html
+++ b/index.html
@@ -432,11 +432,19 @@ sudo supervisorctl start newebe
 <div id="demo">
     <h2>Demo</h2>
     <p>
-    You can have a look at Newebe by going to this URL: 
+    You can have a look at Newebe by using one of these three instances: 
     </p>
-    <a href="http://demo.newebe.org/">demo.newebe.org</a>
     <p>
-    Sesame: newebe
+    Use the Dan Frazer's Newebe: <a href="http://demo.newebe.org/">demo-dan.newebe.org</a>
+    </p>
+    <p>
+    Use the John Doe's Newebe (Dan's colleague): <a href="http://demo.newebe.org/">demo-dan.newebe.org</a>
+    </p>
+    <p>
+    Use the Maria's Newebe (John's sister): <a href="http://demo.newebe.org/">demo-dan.newebe.org</a>
+    </p>
+    <p>
+    Sesame for each instance: newebe
     </p>
     </div>
 </body>
