--- a/index.html
+++ b/index.html
@@ -435,13 +435,13 @@ sudo supervisorctl start newebe
     You can have a look at Newebe by using one of these three instances: 
     </p>
     <p>
-    Use the Dan Frazer's Newebe: <a href="http://demo.newebe.org/">demo-dan.newebe.org</a>
+    Use the Dan Frazer's Newebe: <a href="http://demo-dan.newebe.org/">demo-dan.newebe.org</a>
     </p>
     <p>
-    Use the John Doe's Newebe (Dan's colleague): <a href="http://demo.newebe.org/">demo-dan.newebe.org</a>
+    Use the John Doe's Newebe (Dan's colleague): <a href="http://demo-john.newebe.org/">demo-john.newebe.org</a>
     </p>
     <p>
-    Use the Maria's Newebe (John's sister): <a href="http://demo.newebe.org/">demo-dan.newebe.org</a>
+    Use the Maria's Newebe (John's sister): <a href="http://demo-maria.newebe.org/">demo-maria.newebe.org</a>
     </p>
     <p>
     Sesame for each instance: newebe
