change version to 0.7.0

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
     <h1>Freedom To Share</h1>
     <h2 class="center">Newebe is a Distributed Social Network</h1>
     <div class="center">
-      version 0.6.0
+      version 0.7.0
     </div>
 
     <div class="downloads center">
-        <a class="button" href="https://github.com/downloads/gelnior/newebe/newebe-server_0.6.0-1_all.deb">Debian Package</a>
+        <a class="button" href="http://newebe.org/newebe-0.7.0.deb">Debian Package</a>
         <a class="button" href="https://github.com/gelnior/newebe/tree/master/deploy/docker">Dockerfile</a>
     </div>
 
@@ -134,8 +134,8 @@
     <h2>Install</h2>
     <h3>Installation on a debian (testing) server:</h3>
     <pre> 
-wget https://github.com/downloads/gelnior/newebe/newebe-server_0.6.0-1_all.deb -
-sudo dpkg -i newebe-server_0.6.0-1_all.deb
+wget https://newebe.org/newebe-0.7.0.deb -
+sudo dpkg -i newebe-0.7.0.deb
 sudo apt-get install -f
     </pre>
     <p>
