--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
     <h2>Install</h2>
     <h3>Installation on a debian (testing) server:</h3>
     <pre> 
+sudo apt-get update
+sudo apt-get upgrade
 wget https://newebe.org/newebe-0.7.0.deb -
 sudo dpkg -i newebe-0.7.0.deb
 sudo apt-get install -f
