add troubleshooting for ubuntu 12.04

--- a/index.html
+++ b/index.html
@@ -141,9 +141,15 @@ sudo dpkg -i newebe-0.7.0.deb
 sudo apt-get install -f
     </pre>
     <p>
-      Then your newebe will run on port 8000.
+      Then your newebe will run on port 8282.
     </p>
- 
+    <p>
+    On Ubuntu 12.04 you will have to install this package manually:
+    </p>
+    <pre> 
+    wget https://launchpad.net/ubuntu/+archive/primary/+files/python-cssselect_0.6.1-1_all.deb
+    sudo dpkg -i python-cssselect_0.6.1-1_all.deb
+    </pre>
     <h3>Installation on a remote server for Debian or Ubuntu users from your 
     local computer:</h3>
     <p>
