add link to the ansible playbook

--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
     <div class="downloads center">
         <a class="button" href="http://newebe.org/newebe-0.7.0.deb">Debian Package</a>
         <a class="button" href="https://github.com/gelnior/newebe/tree/master/deploy/docker">Dockerfile</a>
+        <a class="button" href="https://github.com/gelnior/newebe/tree/master/deploy/ansible">Ansible Playbook</a>
+    </div>
     </div>
 
     <br />
